# task5-ros2-Advika-3

fleet_ws/: Dockerfile  run.sh
fleet_ws/src/drone_fleet/: package.xml
fleet_ws/src/drone_fleet/src/: drone_node.cpp  fleet_manager.cpp
part1/: CMakeLists.txt
part1/include/: drone.hpp  mission_drone.hpp  vehicle.hpp
part1/src/: drone.cpp  mission_drone.cpp
tasks/fleet_ws/src/drone_fleet/: CMakeLists.txt
tasks/fleet_ws/src/drone_fleet/launch/: fleet.launch.py
tasks/fleet_ws/src/drone_fleet/src/: health_monitor.cpp
tasks/part1/include/: autonomous_drone.hpp
tasks/part1/src/: autonomous_drone.cpp  main.cpp  vehicle.cpp
